Spring for Kafka. Retry amount and interval between retries

--- a/ProductsMicroservice/src/main/resources/application.yml
+++ b/ProductsMicroservice/src/main/resources/application.yml
@@ -12,3 +12,6 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
+      retries: 10
+      properties:
+        retry.backoff.ms: 1000
