--- a/ProductsMicroservice/src/main/resources/application.yml
+++ b/ProductsMicroservice/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
-      retries: 10
+#      retries: 10
       properties:
-        retry.backoff.ms: 1000
+#        retry.backoff.ms: 1000
+        delivery.timeout.ms: 120000
+        linger.ms: 0
+        request.timeout.ms: 30000
