--- a/ProductsMicroservice/src/main/resources/application.yml
+++ b/ProductsMicroservice/src/main/resources/application.yml
@@ -10,9 +10,11 @@ spring:
     producer:
       bootstrap-servers: localhost:9092,localhost:9094,localhost:9096
       acks: all
-#      retries: 10
+      retries: 10
       properties:
-#        retry.backoff.ms: 1000
-        delivery.timeout.ms: 120000
-        linger.ms: 0
-        request.timeout.ms: 30000
+        retry.backoff.ms: 1000
+        max.in.flight.requests.per.connection: 5
+        enable.idempotence: true
+#        delivery.timeout.ms: 120000
+#        linger.ms: 0
+#        request.timeout.ms: 30000
