--- a/EmailNotificationMicroservice/src/main/resources/application.yml
+++ b/EmailNotificationMicroservice/src/main/resources/application.yml
@@ -7,3 +7,16 @@ spring:
     consumer:
       bootstrap-servers: localhost:9092,localhost:9094,localhost:9096
       group-id: product-created-events
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem/testdb
+    name: sa
+    password:
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+
+  h2:
+    console:
+      enabled: true
