--- a/EmailNotificationMicroservice/src/main/resources/application.yml
+++ b/EmailNotificationMicroservice/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem/testdb
+    url: jdbc:h2:mem:testdb
     name: sa
     password:
 
