--- a/TransferService/src/main/resources/application.yml
+++ b/TransferService/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       acks: all
+      transaction-id-prefix: transfer-service-${random.value}-
       properties:
         delivery.timeout.ms: 120000
         linger.ms: 0
@@ -15,6 +16,10 @@ spring:
         max.in.flight.requests.per.connection: 5
         enable.idempotence: true
 
+logging:
+  level:
+    org.springframework.kafka.transaction: DEBUG
+    org.springframework.transaction: TRACE
 
 withdraw-money-topic: withdraw-money-topic
 deposit-money-topic: deposit-money-topic
