--- a/TransferService/src/main/resources/application.yml
+++ b/TransferService/src/main/resources/application.yml
@@ -16,6 +16,19 @@ spring:
         max.in.flight.requests.per.connection: 5
         enable.idempotence: true
 
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    name: sa
+    password:
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+
+  h2:
+    console:
+      enabled: true
+
 logging:
   level:
     org.springframework.kafka.transaction: DEBUG
