--- a/saga-pattern-spring-boot-demo/orders-service/src/main/resources/application.properties
+++ b/saga-pattern-spring-boot-demo/orders-service/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8080
-
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
 spring.kafka.bootstrap-servers=localhost:9092,localhost:9094,localhost:9096
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
@@ -15,6 +13,7 @@ spring.kafka.consumer.group-id=orders-ms
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.appsdeveloperblog.core.*
-
 orders.events.topic.name=orders-events
 products.commands.topic.name=products-commands
+products.events.topic.name=products-events
+payments.commands.topic.name=payments-commands
