--- a/saga-pattern-spring-boot-demo/payments-service/src/main/resources/application.properties
+++ b/saga-pattern-spring-boot-demo/payments-service/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 server.port=8082
-
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
 spring.kafka.admin.auto-create=false
 spring.kafka.bootstrap-servers=localhost:9091,localhost:9092,localhost:9093
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -19,4 +17,7 @@ spring.kafka.consumer.properties.allow.auto.create.topics=false
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 remote.ccp.url=http://localhost:8084
+
+payments.commands.topic.name=payments-commands
+payments.events.topic.name=payments-events
 
